Fix template: remove interpolation to keep using parameterized query